fixing alignment

--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 .video{
-   margin-left: 222px;
+   margin-left: 205px;
    margin-top: -731px;
 }
 .spotify {
